<?xml version="1.0"?>
<package>
  <name>proc_sonar</name>
  <version>1.0.0</version>
  <description>The proc_sonar package</description>

  <author>Marc-Antoine Couture</author>

  <maintainer email="coumarc9@outlook.com">Marc-Antoine Couture</maintainer>
  <license>GPLv3</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>provider_sonar</build_depend>
  <build_depend>cv_bridge</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>provider_sonar</run_depend>
  <run_depend>cv_bridge</run_depend>

</package>
